--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,9 @@ anyhow = "1.0.57"
 log = "0.4.17"
 env_logger = "0.9.0"
 winit = "0.26.1"
-tobj = "3.2.2"
+tobj = { version = "3.2.2", features = ["merging"] }
 glam = "0.20.4"
+
+[target.x86_64-unknown-linux-gnu]
+linker = "/usr/bin/clang"
+rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
