--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ash = "0.37.0"
+
 anyhow = "1.0.57"
 log = "0.4.17"
 env_logger = "0.9.0"
@@ -12,7 +13,9 @@ env_logger = "0.9.0"
 winit = "0.26.1"
 raw-window-handle = "^0.4.2"
 
-tobj = { version = "3.2.2", features = ["merging"] }
+gltf = "1.0.0"
+image = "0.24.2"
+
 glam = "0.20.4"
 
 [target.'cfg(target_os = "macos")'.dependencies]
