--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ winit = "0.26.1"
 raw-window-handle = "^0.4.2"
 
 glam = "0.20.4"
+smallvec = { version = "1.8.0", features = ["union"] }
 
 gltf = "1.0.0"
 image = "0.24.2"
