--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,13 @@ env_logger = "0.9.0"
 winit = "0.26.1"
 raw-window-handle = "^0.4.2"
 
-glam = "0.20.4"
+bytemuck = { version = "1.11.0", features = ["derive"] }
+glam = { version = "0.20.4", features = ["bytemuck"] }
 smallvec = { version = "1.8.0", features = ["union"] }
+nohash-hasher = "0.2.0"
 
+serde_json = "1.0.81"
+serde = { version = "1.0.137", features = ["derive"] }
 gltf = "1.0.0"
 image = "0.24.2"
 
