Major refactoring and improvements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ raw-window-handle = "^0.4.2"
 bytemuck = { version = "1.11.0", features = ["derive"] }
 glam = { version = "0.20.4", features = ["bytemuck"] }
 smallvec = { version = "1.8.0", features = ["union"] }
+arrayvec = "0.7.2"
 nohash-hasher = "0.2.0"
 
 serde_json = "1.0.81"
